# Side-Scroller-Game

./: .gitignore  pyproject.toml  run.py
side_scroller_game/: assets.py  game.py  main.py  obstacles.py  player.py  powerups.py
side_scroller_game/sounds/: hit.aup3  jump.aup3  powerup.aup3  wave-fired.aup3
